[gd_scene load_steps=4 format=2]

[ext_resource path="res://textures/card_spot.png" type="Texture" id=1]
[ext_resource path="res://textures/chips/pokerchip.png" type="Texture" id=2]
[ext_resource path="res://scripts/User.gd" type="Script" id=4]

[node name="User" type="Node2D"]
script = ExtResource( 4 )

[node name="Chips" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )

[node name="ChipsLabel" type="Label" parent="Chips"]
margin_left = 80.0
margin_top = -5.33334
margin_right = 120.0
margin_bottom = 8.66666
text = "Diff: +1"

[node name="Card1" type="Sprite" parent="."]
position = Vector2( -60, 125 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Card2" type="Sprite" parent="."]
position = Vector2( 60, 125 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Hit" type="Button" parent="UI"]
margin_left = 45.0
margin_top = 204.0
margin_right = 76.0
margin_bottom = 224.0
text = "Hit"

[node name="Stay" type="Button" parent="UI"]
margin_left = -80.0
margin_top = 227.0
margin_right = -42.0
margin_bottom = 247.0
text = "Stay"

[node name="DoubleDown" type="Button" parent="UI"]
margin_left = 16.0
margin_top = 230.0
margin_right = 114.0
margin_bottom = 250.0
text = "Double Down"

[node name="BetHigh" type="Button" parent="UI"]
margin_left = -124.0
margin_top = -14.0
margin_right = -57.0
margin_bottom = 6.0
text = "High Bet"

[node name="BetLow" type="Button" parent="UI"]
margin_left = -126.0
margin_top = 18.0
margin_right = -57.0
margin_bottom = 38.0
text = "Low Bet"

[connection signal="pressed" from="UI/Hit" to="." method="_on_Hit_pressed"]
[connection signal="pressed" from="UI/Stay" to="." method="_on_Stay_pressed"]
[connection signal="pressed" from="UI/DoubleDown" to="." method="_on_DoubleDown_pressed"]
[connection signal="pressed" from="UI/BetHigh" to="." method="_on_BetHigh_pressed"]
[connection signal="pressed" from="UI/BetLow" to="." method="_on_BetLow_pressed"]
